updated gitignore and main.tf

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@ terraform.tfstate.backup
 **/.terraform/*
 *.tfstate
 *.tfstate.*
+.vscode
 #.pem /////////// para nao compartilhar a chave da minha aws (como o repo ta privado nao precisa)
