added a line in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ terraform.tfstate.backup
 **/.terraform/*
 *.tfstate
 *.tfstate.*
-.vscode
+.vscode/
+hosts.yml
 #.pem /////////// para nao compartilhar a chave da minha aws (como o repo ta privado nao precisa)
