--- a/playbooks_ansible/install_programs.yml
+++ b/playbooks_ansible/install_programs.yml
@@ -7,11 +7,19 @@
       - virtualenv
       update_cache: yes
     become: yes
+
   - name: dependencies install with pip in a virutal env (django and django rest)
     pip:
       virtualenv: /home/ubuntu/thiago/venv
       name:
         - django
         - djangorestframework
-  - name: project init
+  - name: project create
     shell: '. /home/ubuntu/thiago/venv/bin/activate; django-admin startproject app /home/ubuntu/thiago'
+
+  - name: add all hosts to access app
+    lineinfile:
+      path: /home/ubuntu/thiago/app/settings.py
+      regexp: 'ALLOWED_HOSTS'
+      line: 'ALLOWED_HOSTS = ["*"]'
+      backrefs: yes
